<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tab1">

    <ImageView
            android:id="@+id/fanis_imageview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:scaleType="centerCrop"
        android:contentDescription="TODO" />


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:fillViewport="false"
        android:scrollbarStyle="insideOverlay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="vertical">

            <Button
                android:id="@+id/button12"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/bar"
                android:textAllCaps="false"
                />


            <Button
                android:id="@+id/button8"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/basket"
                android:textAllCaps="false"
                android:textSize="11.5sp"/>

            <Button
                android:id="@+id/button17"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/fifa"
                android:textAllCaps="false"
                android:textSize="13sp" />

            <Button
                android:id="@+id/button37"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/fifa_me_aderfo"
                android:textAllCaps="false"
                android:textSize="13sp" />

            <Button
                android:id="@+id/button54"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/dieta"
                android:textAllCaps="false"
                android:textSize="10dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rights"
                android:textAlignment="center"
                android:textColor="@color/White" />


        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>